css/style.css
/* ... */
  .projects__row:last-child {
    margin-bottom: 0; }
  .projects__row-img-cont {
    overflow: hidden; }
  .projects__row-img {
    width: 100%;
    display: block;
    object-fit: cover; }
  .projects__row-content {
    padding: 2rem 0;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: flex-start; }
    @media only screen and (max-width: 56.25em) {
      .projects__row-content {
        align-items: center; } }
    .projects__row-content-title {
      color: #efefef;
      font-weight: 700;
      font-size: 2.8rem;
      margin-bottom: 2rem; }
      @media only screen and (max-width: 37.5em) {
        .projects__row-content-title {
          font-size: 2.4rem; } }
    .projects__row-content-desc {
      font-size: 1.8rem;
      color: grey;
      max-width: 60rem;
      line-height: 1.7;
      margin-bottom: 3rem; }
      @media only screen and (max-width: 37.5em) {
        .projects__row-content-desc {
          font-size: 1.7rem; } }

.contact {
  background: #ffc315;
  position: relative;
  overflow: hidden; }

.contact::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: linear-gradient(135deg, rgba(255, 220, 80, 0.92), rgba(255, 150, 10, 0.82), rgba(255, 220, 80, 0.92));
  background-size: 300% 300%;
  animation: gradientShift 7s ease-in-out infinite;
  z-index: 0; }

.contact .main-container {
  position: relative;
  z-index: 1; }

  .contact__form-container {
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    background: white;
    padding: 4rem;
    margin-top: 6rem;
    max-width: 80rem;
    text-align: right;
    width: 95%;
    border-radius: 5px;
    margin: 5rem auto 0 auto; }
    @media only screen and (max-width: 37.5em) {
      .contact__form-container {
        padding: 3rem; } }
  .contact__form-field {
    margin-bottom: 4rem; }
    @media only screen and (max-width: 37.5em) {
      .contact__form-field {
        margin-bottom: 3rem; } }
  .contact__form-label {
    color: #666;
    font-size: 1.4rem;
    letter-spacing: 1px;
    font-weight: 700;
    margin-bottom: 1rem;
    display: block;
    text-align: left; }
  .contact__form-input {
    color: #000;
    padding: 2rem;
    width: 100%;
    border: 1px solid #ebebeb;
    font-size: 1.6rem;
    letter-spacing: 0px;
    background: #f0f0f0;
    border-radius: 5px;
    font-weight: 600;
    /* Code for Modern Browsers */
    /* Code for WebKit, Blink, Edge */
    /* Code for Internet Explorer 10-11 */
    /* Code for Microsoft Edge */
    /* Code for Mozilla Firefox 4 to 18 */
    /* Code for Mozilla Firefox 19+ */ }
    .contact__form-input::placeholder {
      color: #999;
      font-weight: 600;
      font-size: 1.6rem; }
    .contact__form-input::-webkit-input-placeholder {
      color: #999;
      font-weight: 600;
      font-size: 1.6rem; }
    .contact__form-input:-ms-input-placeholder {
      color: #999;
      font-weight: 600;
      font-size: 1.6rem; }
    .contact__form-input::-ms-input-placeholder {
      color: #999;
      font-weight: 600;
      font-size: 1.6rem; }
    .contact__form-input:-moz-placeholder {
      opacity: 1;
      color: #999;
      font-weight: 600;
      font-size: 1.6rem; }
    .contact__form-input::-moz-placeholder {
      opacity: 1;
      color: #999;
      font-weight: 600;
      font-size: 1.6rem; }
  .contact__btn {
    width: 30%;
    padding: 2rem 4rem;
    font-size: 1.6rem; }
    @media only screen and (max-width: 37.5em) {
      .contact__btn {
        width: 100%; } }

.project-cs-hero {
  color: #000;
  background: #ffc315;
  position: relative;
  overflow: hidden; }
  @media only screen and (max-width: 37.5em) {
    .project-cs-hero {
      height: unset;
      min-height: unset; } }

.project-cs-hero::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: linear-gradient(135deg, rgba(255, 220, 80, 0.92), rgba(255, 150, 10, 0.82), rgba(255, 220, 80, 0.92));
  background-size: 300% 300%;
  animation: gradientShift 7s ease-in-out infinite;
  z-index: 0; }

  .project-cs-hero__content {
    padding: 25rem 0 17rem 0;
    max-width: 90rem;
    width: 92%;
    margin: auto;
    position: relative;
    z-index: 1; }
    @media only screen and (max-width: 37.5em) {
      .project-cs-hero__content {
        padding: 19rem 0 13rem 0;
        margin: auto;
        position: relative;
        z-index: 1;
        transform: translate(0, 0); } }
  .project-cs-hero__info {
    margin: 3rem auto 0 auto;
    max-width: 80rem; }
  .project-cs-hero__cta {
    margin-top: 5rem;
    text-align: center; }

.project-details__content {
  padding: 8rem 0;
  max-width: 90rem;
  margin: auto; }
  .project-details__content-title {
    font-weight: 700;
    font-size: 2.8rem;
    margin-bottom: 3rem; }
    @media only screen and (max-width: 37.5em) {
      .project-details__content-title {
        font-size: 2.4rem; } }
#AppIframe{
  position: absolute;
  display: block;
  border-color: #000;
  border-width: 2px;
  z-index: 1;
  width: 645px;
  height: 405px;
  margin: -49em 0 0em 12.7em;
} 
@media only screen and (max-width: 75em) {
  #AppIframe{
    width: 608px;
    height: 380px;
  }
}
@media only screen and (max-width: 56.25em) {
  #AppIframe{
    width: 65vw;
    height: 42.2vw;
    margin: -50.5vw 0 0em 12.8vw;
    }
  }
@media only screen and (max-width: 37.5em) {
#AppIframe {
  width: 64vw;

  }
}  
@media only screen and (min-width: 112.5em) {
  #AppIframe {
    width: 675px;
    height: 420px;
    margin: -49em 0 0em 12.7em;
  }
}


.project-details__showcase-img-cont {
  width: 100%;
  margin-bottom: 6rem;
  position: relative; }

.iframe-loader-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 3; }
/* ... */

